tests/neg/i8827b.check
-- [E172] Type Error: tests/neg/i8827b.scala:16:28 ---------------------------------------------------------------------
16 |  summon[Order[Option[Foo]]] // error
   |                            ^
   |No given instance of type pkg.Order[pkg.Foo] was found for parameter orderA of given instance given_Order_Option in object Order
   |
   |The following import might fix the problem:
   |
   |  import pkg.Givens.orderFoo
   |
